# inverse-value-learning

./: .gitignore  README.md  pyproject.toml
data/: .gitignore
figures/: arch.ipynb  cross.ipynb  probe.ipynb
scripts/: align_vocab.sh  convert_model_for_inference.sh  download.sh  eval_mt_bench.sh  finetune_llama-2-7b_sharegpt.sh  finetune_llama-2_1_1b_7b_residual_plus.sh  finetune_llama-2_7b_1_1b_residual_plus.sh  finetune_llama-2_7b_residual_plus.sh  finetune_tinyllama.sh  finetune_tinyllama_cacsade_plus.sh  finetune_tinyllama_residual_plus.sh  finetune_tinyllama_residual_plus_infinite.sh  finetune_tinyllama_residual_plus_norm.sh  lm_eval.sh  lm_eval_custom.sh  lm_eval_custom_13b.sh  lm_eval_custom_7b.sh  lm_eval_proxy.sh  serve.sh  tulu_eval_1_1b.sh  tulu_eval_residual_1_1b.sh  tulu_eval_residual_1_1b_13b.sh  tulu_eval_residual_1_1b_70b.sh  tulu_eval_residual_1_1b_7b.sh
src/ivl/eval/: eval_gsm8k.py  eval_humaneval.py  eval_ifeval.py  eval_mbpp.py  eval_mt_bench.py  eval_toxicgen.py  gen_mt-bench_judgement.py  get_train_pure_text.py  inferencer.py  modeling.py  vocab_align.py
src/ivl/eval/codex_humaneval/: data.py  evaluation.py  execution.py
src/ivl/eval/ifeval/: instructions.py  instructions_registry.py  instructions_util.py
src/ivl/eval/mbpp/: evaluation.py  execution.py  mbpp.py
src/ivl/serve/: convert_model_for_inference.py  modeling.py  serve_llama.py
src/ivl/train/: data_module.py  modeling_llama.py  train_sft.py  train_sft_cascade_plus.py  train_sft_residual_no_trainer.py  train_sft_residual_plus.py
