[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ivl"
description = ""
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    { name = "luxinyu1", email = "luxinyu2021@iscas.ac.cn" },
]

dependencies = [
    "torch==2.3.0",
    "tensorboard",
    "wandb",
    "datasets",
    "tokenizers",
    "sentencepiece",
    "numpy",
    "pandas",
    "transformers>=4.41.2",
    "deepspeed",
    "pydantic",
    "packaging",
    "accelerate",
    "ninja",
    "einops",
    "wandb",
    "fire",
    "tenacity",
    "vllm==0.4.3",
    "langdetect",
    "gradio",
]

[project.optional-dependencies]
train = [
  "flash-attn>=2.0"
]

[tool.pip]
extra-index-url = ["https://pypi.tuna.tsinghua.edu.cn/simple"]

[tool.black]
line-length = 120
target-version = ['py310']
